# easy-robot-commands

./: CMakeLists.txt  package.xml
include/container/: concepts.hpp  multithread_stream.hpp  producer.hpp
include/easy_robot_commands/: msg_serialized_funcs.hpp  register_commands.hpp  robot_modules_mode.hpp  stream.hpp
include/easy_robot_commands/base_caller_specified/: robot_chassis_velocity.hpp  robot_modules_mode.hpp
include/easy_robot_commands/shared_member/: base_caller_template.hpp  concepts.hpp  pkg_info.hpp  trigger_operation.hpp
include/protocol/: crc.hpp  serialized_protocol.hpp
msg/: RobotModulesMode.msg  RobotPitchAngle.msg  RobotShootInfo.msg
src/: base_caller_specified.cpp  register_commands.cpp  test.cpp
